# nu-msgraph

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_send.py  generate_certificate.py  subscription_setup.py  test_credentials.py  test_integration.py  test_send_email.py  test_subscription.py  webhook_fastapi.py  webhook_server.py
src/nu_msgraph/: __init__.py  client.py  config.py  crypto.py  exceptions.py  models.py  subscription.py  webhook.py
tests/: test_client.py  test_crypto.py  test_subscription.py  test_webhook.py
