[project]
name = "nu-msgraph"
version = "0.1.0"
description = "Microsoft Graph API client with email and webhook support for Rich Notifications"
authors = [{name = "AI-Hivemind", email = "dev@ai-hivemind.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["microsoft", "graph", "email", "webhook", "notifications", "oauth2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/AI-Hivemind/nu-msgraph"
Repository = "https://github.com/AI-Hivemind/nu-msgraph"
Issues = "https://github.com/AI-Hivemind/nu-msgraph/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nu_msgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/nu_msgraph"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
